--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "css-mqpacker": "^7.0.0",
         "gulp-babel": "^8.0.0",
         "gulp-clean-css": "^4.3.0",
+        "gulp-concat": "^2.6.1",
         "gulp-imagemin": "^7.1.0",
         "gulp-notify": "^3.2.0",
         "gulp-plumber": "^1.2.1",
